--- a/modelling/modelling.tex
+++ b/modelling/modelling.tex
@@ -605,11 +605,16 @@ This 3D mathematical model will be used in a non-linear simulation of a multirot
     \paragraph
     To verify whether the simulation model derived in previous sections is an accurate representation of the real-world dynamics, the simulation data is verified against practical data.
     Firstly, a velocity step response was performed in a practical flight with a quadrotor to verify the quadrotor model without a payload.
+    The practical quadrotor will be described in Chapter~\ref{chap:exp_design}.
     This flight was performed on a day with minimal wind to try exclude the effect of wind disturbances in the comparison.
+    
+    \paragraph
     Starting from the same initial condition, the same velocity step setpoint was commanded in simulation, and the resulting simulation data was compared to the practical flight data.
     Note that this includes the dynamics of the default quadrotor controllers which will be described in Chapter~\ref{chap:control}.
     The Simulink\texttrademark~simulation environment will also be discussed in Chapter~\ref{chap:control}.
     The results in this section therefore compare the combined quadrotor and controller simulation model to practical flight data.
+
+    \input{modelling/plots/prac_vs_sim_vel_step_no_payload.tex}
 
     \paragraph
     Figure~\ref{fig:prac_vs_sim_vel_step_no_payload} shows the velocity step response of a practical and simulated flight.
@@ -617,12 +622,15 @@ This 3D mathematical model will be used in a non-linear simulation of a multirot
     Note that the practical velocity curve is more irregular and not as smooth as the simulated curve.
     This may be due to slight wind disturbances or measurement noise, which is not considered in this simulation.
 
-    \input{modelling/plots/prac_vs_sim_vel_step_no_payload.tex}
+    \input{modelling/plots/prac_vs_sim_vel_step_with_payload.tex}
 
     \paragraph
-    No load
-
-    \input{modelling/plots/prac_vs_sim_vel_step_with_payload.tex}
+    The same procedure was followed to verify the quadrotor with a suspended payload model.
+    Figure~\ref{fig:prac_vs_sim_vel_step_with_payload} compares the practical and simulated velocity step responses with a suspended payload attached to the vehicle.
+    In this figure the velocity response dot not correlate as well as they do in the experiment without a payload.
+    This may be due to the added complexity of the model.
+    The considered system includes
+    However
 
     \paragraph
     With payload vel
