Changed ylabel Velocity to North velocity

--- a/control/plots/mpc_vel_prediction_vs_actual.tex
+++ b/control/plots/mpc_vel_prediction_vs_actual.tex
@@ -3,7 +3,7 @@
     \begin{tikzpicture}
         \begin{axis}[            
             xlabel = Time,
-            ylabel = Velocity,
+            ylabel = North velocity,
             x unit = \si{\second},
             y unit = \si{\metre/\second},
             xmin = 0,   xmax = 9.1,
